[tool.poetry]
name = "mkdown_convert"
version = "0.1.0"
description = ""
authors = ["Jas Palermo <jasmes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Markdown = "^3.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
